--- a/Phase_B/gptalk-frontend/src/app/pages/about/about.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/about/about.component.html
@@ -19,7 +19,7 @@
         [showNavigators]="false"
         autoplayInterval="3000">
         <ng-template let-software pTemplate="item">
-          <div class="border-0 surface-border border-round m-2 p-3">
+          <div class="border-0 surface-border border-round m-2 lg:p-3 p-0">
             <div class="mb-3">
               <div class="relative mx-auto">
                 <img
