--- a/Phase_B/gptalk-frontend/src/app/pages/learn/choose-the-tense/choose-the-tense.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/choose-the-tense/choose-the-tense.component.html
@@ -37,7 +37,7 @@
     [style.visibility]="isExerciseDone() ? 'visible' : 'hidden'"
   >
     <p><b>Translation:</b></p>
-    <p [class.hebrew-text]="lessonLanguage() === 'English'">
+    <p [class.hebrew-text]="lessonLanguage() === 'Hebrew'">
       {{exerciseData().translation}}
     </p>
   </div>
