--- a/Phase_B/gptalk-frontend/src/app/pages/learn/translate-word/translate-word.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/translate-word/translate-word.component.html
@@ -1,5 +1,5 @@
-<div class="flex justify-content-center gap-3 mb-2">
-  <p style="font-size: 36px">{{exerciseData().question}} </p>
+<div class="translate-word-wrapper flex justify-content-center gap-3 mb-2">
+  <p>{{exerciseData().question}} </p>
 </div>
 
 <div class="buttons-group p-fluid grid-12 gap-2 mb-3">
