--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-statistics/profile-statistics.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-statistics/profile-statistics.component.html
@@ -2,21 +2,21 @@
   <h1>Statistics</h1>
   <div class="statistics mt-5">
     <div class="stat-block">
-      <img src="assets/profile/streak.png" alt="streak" style="width: 6rem;">
+      <img src="assets/profile/streak.png" alt="streak">
       <div>
         <small>Current Streak</small>
         <p>{{ streak() }} Days</p>
       </div>
     </div>
     <div class="stat-block">
-      <img src="assets/profile/lessons-completed.png" alt="lessons" style="width: 6rem;">
+      <img src="assets/profile/lessons-completed.png" alt="lessons">
       <div>
         <small>Lessons Completed</small>
         <p>{{ lessons() }}</p>
       </div>
     </div>
     <div class="stat-block">
-      <img src="assets/profile/total-exp.png" alt="exp" style="width: 6rem;">
+      <img src="assets/profile/total-exp.png" alt="exp">
       <div>
         <small>Total EXP Earned</small>
         <p>{{ exp() }}</p>
