--- a/Phase_B/gptalk-frontend/src/app/pages/leaderboard/leaderboard.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/leaderboard/leaderboard.component.scss
@@ -27,7 +27,7 @@ main {
 			background: var(--background-over-block-clr);
 			border-radius: 6px;
 			padding: 1.5rem 4rem;
-			width: 25rem;
+			width: 31%;
 
 			& .content {
 				display: flex;
@@ -106,4 +106,76 @@ h1 {
   width: 100%;
   display: grid;
   place-items: center;
+}
+
+@media (max-width: 1300px) {
+  .top-3 {
+    gap: 1.5rem; // Adjust gap between top 3 users
+
+    .placement {
+      width: auto; // Make placement width auto to fit the screen width
+      padding: 1rem; // Reduce padding inside placement
+
+      & .content {
+        app-user-avatar {
+          display: none;
+        }
+
+        & .details {
+          & p {
+            font-size: 1rem;
+            font-weight: 600;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .full-name-wrapper {
+    font-size: 0.2rem;
+  }
+
+  main {
+    padding: 0;
+
+    .top-3 {
+      gap: 1em;
+
+      .placement {
+        width: auto; // Make placement width auto to fit the screen width
+        padding: 1rem; // Reduce padding inside placement
+      }
+    }
+
+    .leaderboard-table {
+      .header {
+        tr {
+          padding: 0.5rem; // Reduce padding inside header cells
+          gap: 1.2rem;
+
+          th {
+            text-align: center; // Center text in header cells
+          }
+        }
+      }
+
+      .body {
+        padding: 0.5rem;
+        tr {
+          gap: 2rem;
+          td {
+            font-size: .9rem;
+          }
+        }
+      }
+    }
+  }
+
+  .lang-dropdown {
+     ::ng-deep .p-dropdown {
+      width: 100%; // Make dropdown full width on smaller screens
+    }
+  }
 }
