--- a/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.html
@@ -1,19 +1,20 @@
-<div
-  class="exp-bar-wrapper"
-  pTooltip="Exp: {{totalExp()}} <br/> {{expForNextLevel() - totalExp()}} more for next level"
-  tooltipPosition="left"
-  [escape]="false"
->
+<main>
+  <div
+    class="exp-bar-wrapper"
+    pTooltip="Exp: {{totalExp()}} <br/> {{expForNextLevel() - totalExp()}} more for next level"
+    tooltipPosition="left"
+    [escape]="false"
+  >
 
-  <p-progressBar [value]="progressVal()" [ngClass]="'progress-bar-custom'" [style]="{'border-radius': '4px'}">
-    <ng-template pTemplate="content">
-      <span></span>
-    </ng-template>
-  </p-progressBar>
-</div>
-<div class="lvl-display-wrapper">
-  <img class="lvl-decoration" src="assets/profile/levelCoin.png" alt="exp-bar-decoration" style="width: 4.5rem;">
-  <p class="lvl-text">{{level()}}</p>
-</div>
-
+    <p-progressBar [value]="progressVal()" [ngClass]="'progress-bar-custom'" [style]="{'border-radius': '4px'}">
+      <ng-template pTemplate="content">
+        <span></span>
+      </ng-template>
+    </p-progressBar>
+  </div>
+  <div class="lvl-display-wrapper">
+    <img class="lvl-decoration" src="assets/profile/levelCoin.png" alt="exp-bar-decoration">
+    <p class="lvl-text">{{level()}}</p>
+  </div>
+</main>
 
