--- a/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.scss
@@ -3,7 +3,6 @@
   position: absolute;
   right: 3.5%;
   top: 3%;
-
   background: linear-gradient(to right, rgb(174, 187, 215) 0%, rgba(39, 133, 236, 0.64) 100%);
   padding: 7px;
   border-radius: 9px;
@@ -25,6 +24,10 @@
   top: 1.5%;
 }
 
+.lvl-decoration {
+  width: 4.5rem;
+}
+
 .lvl-text {
   position: absolute;
   top: 50%;
@@ -38,4 +41,20 @@
   user-select: none;
 }
 
+@media (max-width: 1024px) {
+  .lvl-decoration {
+    width: 3.5rem;
+  }
 
+  .lvl-display-wrapper {
+    position: absolute;
+    top: 5%;
+  }
+
+  ::ng-deep .exp-bar-wrapper {
+    top: 6%;
+    right: 6.5%;
+    width: 33%;
+    padding: 5px;
+  }
+}
