--- a/Phase_B/gptalk-frontend/src/app/pages/learn/results-screen/results-screen.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/results-screen/results-screen.component.scss
@@ -1,3 +1,9 @@
 .results-wrapper {
   font-size: 2.6rem;
 }
+
+@media (max-width: 1024px) {
+  .results-wrapper {
+    font-size: var(--tm);
+  }
+}
