--- a/Phase_B/gptalk-frontend/src/app/register/register.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/register/register.component.scss
@@ -8,7 +8,6 @@
   position: relative;
   background-color: #fff;
   width: fit-content;
-  display: flex;
   padding: 0.5rem 0.5rem;
   border-radius: 6px;
 }
@@ -60,6 +59,13 @@
   color: var(--primary-clr);
 }
 
+.text-login-link-mobile {
+  font-family: "Inter var", sans-serif;
+  text-align: center;
+  padding-left: 3rem;
+  display: none;
+}
+
 a {
   text-decoration: none;
   color: var(--blue-500);
@@ -82,6 +88,27 @@ a:hover {
   // Highlights invalid password criteria
   & li.fail {
     color: var(--red-400);
+  }
+}
+
+@media (max-width: 1024px) {
+  .form-wrapper {
+    width: 100%;
+    height: 70vh;
+    padding: 0;
+  }
+
+  .register-content {
+     padding: 0;
+  }
+    .left-panel-wrapper {
+    p-image, .text-header, .text-login-link {
+      display: none;
+    }
+  }
+
+  .text-login-link-mobile {
+    display: flex;
   }
 }
 
